--- a/articles/azure-resource-manager/templates/toc.yml
+++ b/articles/azure-resource-manager/templates/toc.yml
@@ -4,14 +4,10 @@
   items:
     - name: Was sind ARM-Vorlagen?
       href: overview.md
-    - name: Übersicht über Bicep
-      href: bicep-overview.md
 - name: Schnellstarts
   items:
     - name: 'Erstellen von JSON-Vorlagen: VS Code'
       href: quickstart-create-templates-use-visual-studio-code.md
-    - name: 'Erstellen von Bicep-Vorlagen: VS Code'
-      href: quickstart-create-bicep-use-visual-studio-code.md
     - name: 'Erstellen von JSON-Vorlagen: Portal'
       href: quickstart-create-templates-use-the-portal.md
     - name: Erstellen von Vorlagenspezifikationen
@@ -40,38 +36,6 @@
           href: template-tutorial-add-tags.md
         - name: 10. Verwenden einer Parameterdatei
           href: template-tutorial-use-parameter-file.md
-    - name: Bicep für Anfänger
-      items:
-        - name: 1. Erstellen der ersten Vorlage
-          displayName: Bicep
-          href: bicep-tutorial-create-first-bicep.md
-        - name: 2. Hinzufügen von Parametern
-          displayName: Bicep
-          href: bicep-tutorial-add-parameters.md
-        - name: 3. Hinzufügen von Vorlagenfunktionen
-          displayName: Bicep
-          href: bicep-tutorial-add-functions.md
-        - name: 4. Hinzufügen von Variablen
-          displayName: Bicep
-          href: bicep-tutorial-add-variables.md
-        - name: 5. Hinzufügen von Ausgaben
-          displayName: Bicep
-          href: bicep-tutorial-add-outputs.md
-        - name: 6. Verwenden einer exportierten Vorlage
-          displayName: Bicep
-          href: bicep-tutorial-export-template.md
-        - name: 7. Verwenden einer Schnellstartvorlage
-          displayName: Bicep
-          href: bicep-tutorial-quickstart-template.md
-        - name: 8. Hinzufügen von Tags
-          displayName: Bicep
-          href: bicep-tutorial-add-tags.md
-        - name: 9. Verwenden einer Parameterdatei
-          displayName: Bicep
-          href: bicep-tutorial-use-parameter-file.md
-        - name: 10. Hinzufügen von Modulen
-          displayName: Bicep
-          href: bicep-tutorial-add-modules.md
     - name: Bereitstellung
       items:
         - name: 1. Bereitstellen einer lokalen Vorlage
@@ -325,45 +289,34 @@
 - name: Konzepte
   items:
     - name: Bewährte Methoden für Vorlagen
-      href: template-best-practices.md
-    - name: Bicep
-      items:
-        - name: Installieren von Bicep
-          href: bicep-install.md
-        - name: Konvertieren zwischen JSON und Bicep
-          href: bicep-decompile.md
-        - name: Vergleichen von JSON und Bicep
-          href: compare-template-syntax.md
+      href: best-practices.md
     - name: Datentypen
       href: data-types.md
     - name: Häufig gestellte Fragen
       href: frequently-asked-questions.md
     - name: Vorlagen für Cloudkonsistenz
-      href: templates-cloud-consistency.md
+      href: template-cloud-consistency.md
     - name: Bereitstellungsmodi
       href: deployment-modes.md
     - name: Löschung des Bereitstellungsverlaufs
       href: deployment-history-deletions.md
-    - name: Löschung des vollständigen Modus
-      href: complete-mode-deletion.md
+    - name: Löschung von Bereitstellungen im vollständigen Modus
+      href: deployment-complete-mode-deletion.md
 - name: Anleitung
   items:
     - name: Erstellen von Vorlagen
       items:
         - name: JSON-Struktur
           displayName: 'parameters,variables,resources,outputs,condition'
-          href: template-syntax.md
-        - name: Bicep-Struktur
-          displayName: 'parameters,variables,resources,outputs,condition'
-          href: bicep-file.md
+          href: syntax.md
         - name: Schreiben von Vorlagenausdrücken
           href: template-expressions.md
         - name: Parameter
-          href: template-parameters.md
+          href: parameters.md
         - name: Variablen
-          href: template-variables.md
+          href: variables.md
         - name: Benutzerdefinierte Funktionen
-          href: template-user-defined-functions.md
+          href: user-defined-functions.md
         - name: Ressourcen
           items:
             - name: Ressourcendeklaration
@@ -373,13 +326,13 @@
             - name: Bedingte Bereitstellung
               href: conditional-resource-deployment.md
             - name: Festlegen von Ressourcenabhängigkeiten
-              href: define-resource-dependency.md
+              href: resource-dependency.md
             - name: Festlegen des Ressourcenspeicherorts
               href: resource-location.md
             - name: Verwenden von Vorlagenerweiterungen
-              href: add-resource-extensions.md
+              href: resource-extensions.md
         - name: Ausgaben
-          href: template-outputs.md
+          href: outputs.md
         - name: Bereitstellungsskript
           displayName: custom script
           href: deployment-script-template.md
@@ -390,8 +343,6 @@
             - name: Modularisieren von Vorlagen
               displayName: 'linked templates, nested templates'
               href: linked-templates.md
-            - name: Bicep-Module
-              href: bicep-modules.md
         - name: Erstellen mehrerer Instanzen
           items:
             - name: Ressourcen
@@ -441,7 +392,7 @@
             - name: Bereichsübergreifende Funktionen
               href: scope-functions.md
         - name: Was-wäre-wenn-Bereitstellung
-          href: template-deploy-what-if.md
+          href: deploy-what-if.md
         - name: Erneute Bereitstellung bei einem Fehler
           displayName: rollback
           href: rollback-on-error.md
@@ -467,7 +418,7 @@
         - name: Erstellen und Bereitstellen von Vorlagenspezifikationen
           href: template-specs.md
         - name: Konvertieren des Portalvorlagenkatalogs
-          href: convert-to-template-spec.md
+          href: template-spec-convert.md
     - name: CI/CD
       items:
         - name: ARM-Vorlagen mit Pipelines
@@ -530,8 +481,6 @@
       items:
         - name: Alle Funktionen
           href: template-functions.md
-        - name: Any-Funktion (Bicep)
-          href: template-functions-any.md
         - name: Arrayfunktionen
           href: template-functions-array.md
         - name: Vergleichsfunktionen
@@ -550,16 +499,6 @@
           href: template-functions-resource.md
         - name: Zeichenfolgenfunktionen
           href: template-functions-string.md
-    - name: Bicep-Operatoren
-      items:
-        - name: Alle Operatoren
-          href: bicep-operators.md
-        - name: Vergleichsoperatoren
-          href: bicep-operators-comparison.md
-        - name: Logische Operatoren
-          href: bicep-operators-logical.md
-        - name: Numerische Operatoren
-          href: bicep-operators-numeric.md
     - name: REST
       href: /rest/api/resources/
     - name: Azure PowerShell
