--- a/articles/azure-video-analyzer/video-analyzer-docs/index.yml
+++ b/articles/azure-video-analyzer/video-analyzer-docs/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: Juliako
   ms.author: juliako
   ms.date: 03/11/2021
-  ms.openlocfilehash: 9b4418aa8ff0d0cf3fb6d43d52d5b8991f403515
-  ms.sourcegitcommit: 58e5d3f4a6cb44607e946f6b931345b6fe237e0e
+  ms.openlocfilehash: 5971849d941151cbcfae09d156b23520c502495b
+  ms.sourcegitcommit: 6323442dbe8effb3cbfc76ffdd6db417eab0cef7
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 05/25/2021
-  ms.locfileid: "110383416"
+  ms.lasthandoff: 05/28/2021
+  ms.locfileid: "110615109"
 landingContent:
 - title: Azure Video Analyzer-Übersicht
   linkLists:
@@ -28,8 +28,10 @@ landingContent:
       url: ../video-analyzer-for-media-docs/video-indexer-overview.md
   - linkListType: quickstart
     links:
-    - text: Erste Schritte mit Azure Video Analyzer
+    - text: Erste Schritte mithilfe einer ARM-Vorlage
       url: get-started-detect-motion-emit-events.md
+    - text: Erste Schritte mithilfe des Portals
+      url: get-started-detect-motion-emit-events-portal.md
 - title: Video basierend auf Ereignissen aufzeichnen
   linkLists:
   - linkListType: concept
