--- a/articles/iot-develop/index.yml
+++ b/articles/iot-develop/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: timlt
   ms.author: timlt
   ms.date: 01/11/2021
-  ms.openlocfilehash: 29872aa965c7c539cd4e5e4e3c66b90ba63562ed
-  ms.sourcegitcommit: 89c4843ec85d1baea248e81724781d55bed86417
+  ms.openlocfilehash: ba80c9c40beed46222d72903983d74ee9500b3a2
+  ms.sourcegitcommit: 34feb2a5bdba1351d9fc375c46e62aa40bbd5a1f
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 05/06/2021
-  ms.locfileid: "108795671"
+  ms.lasthandoff: 06/10/2021
+  ms.locfileid: "111888750"
 landingContent:
 - title: Informationen zur IoT-Geräteentwicklung
   linkLists:
@@ -39,5 +39,19 @@ landingContent:
   linkLists:
   - linkListType: quickstart
     links:
-    - text: Erste Schritte bei der Entwicklung eingebetteter Geräte
-      url: quickstart-device-development.md
+    - text: Verbinden eines MXCHIP AZ3166 mit Azure IoT
+      url: quickstart-devkit-mxchip-az3166.md
+    - text: Verbinden eines MXCHIP AZ3166 mit Azure IoT Hub
+      url: quickstart-devkit-mxchip-az3166-iot-hub.md
+    - text: Verbinden eines Microchip ATSAME54-XPro mit Azure IoT
+      url: quickstart-devkit-microchip-atsame54-xpro.md
+    - text: Verbinden eines NXP MIMXRT1050-EVKB mit Azure IoT
+      url: quickstart-devkit-nxp-mimxrt1050-evkb.md
+    - text: Verbinden eines NXP MIMXRT1060-EVK mit Azure IoT
+      url: quickstart-devkit-nxp-mimxrt1060-evk.md
+    - text: Verbinden eines Renesas RX65N-2MB mit Azure IoT
+      url: quickstart-devkit-renesas-rx65n-2mb.md
+    - text: Verbinden eines Renesas RX65N Cloud Kit mit Azure IoT
+      url: quickstart-devkit-renesas-rx65n-cloud-kit.md
+    - text: Verbinden eines ST Microelectronics B-L475E/L4S5I-IOT01A mit Azure IoT
+      url: quickstart-devkit-stm-b-l475e.md
