--- a/articles/storage/solution-integration/index.yml
+++ b/articles/storage/solution-integration/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: beber-msft
   ms.author: beber
   ms.date: 03/15/2021
-  ms.openlocfilehash: c1a80811c53d26028a7c3f0585bdc0cbc7c126e0
-  ms.sourcegitcommit: 1fbd591a67e6422edb6de8fc901ac7063172f49e
+  ms.openlocfilehash: 9d577f173b3f93ad5e4967b9a2bb73b55b0c8592
+  ms.sourcegitcommit: 7f59e3b79a12395d37d569c250285a15df7a1077
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 05/07/2021
-  ms.locfileid: "109482037"
+  ms.lasthandoff: 06/02/2021
+  ms.locfileid: "110794714"
 landingContent:
 - title: Partner für Analysen und Big Data
   linkLists:
@@ -57,9 +57,13 @@ landingContent:
     links:
     - text: Leitfaden zu den ersten Schritten mit DobiMigrate
       url: ./validated-partners/data-management/dobimigrate-quick-start-guide.md
+    - text: Leitfaden zu den ersten Schritten mit Komprise
+      url: ./validated-partners/data-management/komprise-quick-start-guide.md
 - title: Partner für primären und sekundären Speicher
   linkLists:
   - linkListType: overview
     links:
     - text: Geprüfte Partner für primären und sekundären Speicher
       url: .\validated-partners\primary-secondary-storage\partner-overview.md
+    - text: ISV-Dateidienste
+      url: .\validated-partners\primary-secondary-storage\isv-file-services.md
