--- a/articles/object-anchors/toc.yml
+++ b/articles/object-anchors/toc.yml
@@ -30,19 +30,25 @@
       href: 'https://github.com/Azure/azure-object-anchors'
 - name: References
   items:
+    - name: Konvertierungs-SDK für .NET
+      href: /dotnet/api/overview/azure/mixedreality.objectanchors.conversion-readme-pre
     - name: Runtime SDK für Unity
       href: /dotnet/api/Microsoft.Azure.ObjectAnchors/
     - name: Runtime SDK für HoloLens C++/WinRT
       href: /cpp/api/object-anchors/winrt/
 - name: Ressourcen
   items:
-    - name: Versionshinweise
-      href: 'https://github.com/Azure/azure-object-anchors/releases'
     - name: Ressourcenverwaltungs-REST-API von Azure Mixed Reality
       href: /rest/api/mixedreality/
-    - name: Fehlercodes bei der Modellkonvertierung
-      href: model-conversion-error-codes.md
+    - name: Erkennen eines komplizierten Objekts
+      href: detect-difficult-object.md
     - name: Häufig gestellte Fragen
       href: faq.md
+    - name: Fehlercodes bei der Modellkonvertierung
+      href: model-conversion-error-codes.md
+    - name: Versionshinweise
+      href: 'https://github.com/Azure/azure-object-anchors/releases'
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-object-anchors'
+    - name: Visualisieren eines konvertierten Modells
+      href: visualize-converted-model.md
