--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -96,6 +96,8 @@
                   href: container-registry-auto-purge.md
             - name: Verwenden von ACR-Webhooks
               href: container-registry-webhook.md
+            - name: Verschieben einer Registrierung in eine andere Region
+              href: manual-regional-move.md
         - name: Sicherheit und Authentifizierung
           items:
             - name: Beschränken des Zugriffs mithilfe eines privaten Endpunkts
@@ -122,12 +124,16 @@
                   href: container-registry-repository-scoped-permissions.md
                 - name: Authentifizieren über Azure Container Instances
                   href: container-registry-auth-aci.md
-                - name: Authentifizieren über Kubernetes mit Geheimnisabruf per Pullvorgang
-                  href: container-registry-auth-kubernetes.md
-                - name: Authentifizieren über Azure Kubernetes Service (AKS)
-                  href: ../aks/cluster-container-registry-integration.md?toc=/azure/container-registry/toc.json&bc=/azure/container-registry/breadcrumb/toc.json
-                - name: Authentifizieren mit einem repositorybezogenen Token (Vorschauversion)
-                  href: container-registry-repository-scoped-permissions.md
+                - name: Authentifizieren über Kubernetes
+                  items:
+                    - name: Kubernetes-Szenarien
+                      href: authenticate-kubernetes-options.md
+                    - name: Anfügen einer Registrierung an Azure Kubernetes Service (AKS)
+                      href: ../aks/cluster-container-registry-integration.md?toc=/azure/container-registry/toc.json&bc=/azure/container-registry/breadcrumb/toc.json
+                    - name: Mandantenübergreifende Authentifizierung über AKS
+                      href: authenticate-aks-cross-tenant.md
+                    - name: Authentifizieren unter Verwendung eines Kubernetes-Pullgeheimnisses
+                      href: container-registry-auth-kubernetes.md
             - name: Rollenbasierte Zugriffssteuerung in Azure
               href: container-registry-roles.md
               displayName: 'permissions, authorization'
